{
    "name": "NXRActionMap",
    "maps": [
        {
            "name": "ControllerLeft",
            "id": "0a4e3a54-e582-4b2f-a52a-fd41f17fef37",
            "actions": [
                {
                    "name": "Joy",
                    "type": "Value",
                    "id": "412dde9a-463b-4eb4-8c23-439572fcdcf9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Menu",
                    "type": "Button",
                    "id": "1d13db37-83dc-495b-82ad-4997dbc79cf1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TriggerPressed",
                    "type": "Button",
                    "id": "6cf897df-cebb-4477-b99b-44c98c64ba3f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TriggerValue",
                    "type": "Value",
                    "id": "15f874bc-a587-4028-9884-9346dc2316fc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Position",
                    "type": "Value",
                    "id": "6e2d23d6-0d9f-4b32-aecd-e8c533841665",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Rotation",
                    "type": "Value",
                    "id": "31f63b1c-6904-4621-9d81-631319a71455",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TrackingState",
                    "type": "Value",
                    "id": "14b5fe11-b6f0-4c63-82af-5dba8ecff698",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "GripPressed",
                    "type": "Button",
                    "id": "e8d3b37b-d474-4e84-addb-51bc12088fbf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AXPressed",
                    "type": "Button",
                    "id": "3ee9a80c-ecea-4980-a646-11f1a8b1eb33",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "58b07e99-b070-4d56-8e12-76bb387997ac",
                    "path": "<XRController>{LeftHand}/{Primary2DAxis}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Joy",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "88af7cb9-3a6b-42f5-ad59-3172ee97f2d3",
                    "path": "<XRController>{RightHand}/{Menu}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0346f12a-ca4d-4b07-9002-33e6aa0e3194",
                    "path": "<XRController>{RightHand}/{Trigger}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerValue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41d20a6a-8a4c-45bf-9726-1e1c950d58a1",
                    "path": "<XRController>{LeftHand}/{PointerRotation}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1bb16bd1-bf61-4575-aba7-993e42e9c4ca",
                    "path": "<XRController>{RightHand}/{SystemButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "afa34a97-8acb-4c1b-9605-92e0e483fb54",
                    "path": "<XRController>{LeftHand}/{PointerPosition}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bb03cef9-7221-4948-a635-ecb1c411e710",
                    "path": "<XRController>{LeftHand}/trackingState",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TrackingState",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "69016ca4-4834-4dae-81b8-32de909d3504",
                    "path": "<XRController>{LeftHand}/{GripButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GripPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d8a564a6-78c5-4ad9-8c31-a9020f62139c",
                    "path": "<XRController>{LeftHand}/{SecondaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AXPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ControllerRight",
            "id": "ff732c88-4781-43db-a6cf-9d43dc2469ba",
            "actions": [
                {
                    "name": "Joy",
                    "type": "Value",
                    "id": "693e1f83-6e5b-4dcd-a49f-25377544c2c4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Menu",
                    "type": "Button",
                    "id": "1ccc5a52-55c5-4836-87e9-ce9f95b7c57d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TriggerPressed",
                    "type": "Button",
                    "id": "59d5eec6-2bd8-44d1-a5be-1668ca9c9d82",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TriggerValue",
                    "type": "Value",
                    "id": "f040e934-5fe8-4086-950c-e482d03067fc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "GripPressed",
                    "type": "Button",
                    "id": "fc28e662-0719-4647-b564-1befc96f2507",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Position",
                    "type": "Value",
                    "id": "f754478a-37b2-4504-801d-b5b22588e8f0",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Rotation",
                    "type": "Value",
                    "id": "67682949-78d7-4abe-ada5-e0e2dc1d1cac",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TrackingState",
                    "type": "Value",
                    "id": "45104891-6c01-4f0f-b485-0870050bda3e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "AXPressed",
                    "type": "Button",
                    "id": "0b4822f7-8670-4cbf-8a08-15d4e533e895",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "306b1acf-3dc3-46a0-8927-68eeffc4a214",
                    "path": "<XRController>{RightHand}/{Primary2DAxis}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Joy",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "696cee2b-08ac-4178-ba23-ac7beb008ae0",
                    "path": "<XRController>{RightHand}/{Menu}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4da16b53-8c48-44ea-891a-4ae4a8817106",
                    "path": "<XRController>{RightHand}/{Trigger}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerValue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d9019cb-eaff-4f01-a68c-81c4591463ea",
                    "path": "<XRController>{RightHand}/{PointerRotation}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "38f21494-24a2-4894-9dda-e55edc5d5cf3",
                    "path": "<XRController>{RightHand}/{TriggerButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "539b580c-8257-4f35-a731-d4d76dc02558",
                    "path": "<XRController>{RightHand}/{PointerPosition}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4ff6c6f3-c8a3-4d21-b7b1-efec3644eeb3",
                    "path": "<XRController>{RightHand}/trackingState",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TrackingState",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "88f42cbe-5350-4307-9d35-e9341a09261b",
                    "path": "<XRController>{RightHand}/{GripButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GripPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "828d9795-4207-459a-9d91-17ca20ab549c",
                    "path": "<XRController>{RightHand}/{SecondaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AXPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "HMD",
            "id": "0a39f5f2-856b-457e-8afd-18949f1d1837",
            "actions": [
                {
                    "name": "Position",
                    "type": "Value",
                    "id": "8ba1fd65-0c79-42c1-8b4e-c47b67d7533c",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Rotation",
                    "type": "Value",
                    "id": "58426167-3115-42d7-93db-6e80a125ca8f",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1e0aae01-1df3-49bd-bd99-b3a2a76f8deb",
                    "path": "<XRHMD>/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6b984320-a676-4206-8143-1a6f4d74642d",
                    "path": "<XRHMD>/deviceRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}